--- a/index.html
+++ b/index.html
@@ -15,8 +15,22 @@
   </head>
   <body>
     
-    <h1>你好，世界！</h1>
-    <span style="color: rgba(120, 120, 120, 1.00);">這是 <b>Ginkgo</b>，你目前版本是 <b>5.0.0</b></span>
+    <div class='top'>
+      <div class='Ll'><img src="img/img01_L.png"></div>
+      <div class='Rl'><img src="img/img02_R.png"></div>
+      <div class='menuboxs'>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </div>
+
+    <div class='cent'></div>
+
+    <div class='footer'></div>
 
   </body>
 </html>
