首頁一點點

--- a/index.html
+++ b/index.html
@@ -16,19 +16,25 @@
   <body>
     
     <div class='top'>
+      <div class='menuboxs'>
+        <div><a href="news.html">最新消息</a></div>
+        <div><a href="about.html">關於燈會</a></div>
+        <div><a href="lantern.html">燈區介紹</a></div>
+        <div><a href="show.html">表演節目</a></div>
+        <div><a href="event.html">活動資訊</a></div>
+        <div><a href="traffic.html">交通資訊</a></div>
+      </div>
       <div class='Ll'><img src="img/img01_L.png"></div>
       <div class='Rl'><img src="img/img02_R.png"></div>
-      <div class='menuboxs'>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-      </div>
     </div>
 
-    <div class='cent'></div>
+    <div class='cent'>
+      <div class='C_boxs'>
+        <div class='title_boxs'><img src="img/title2.png"></div>
+      </div>
+      <div class='CL'><img src="img/img03.png"></div>
+      <div class='CR'><img src="img/Big_img.png"></div>
+    </div>
 
     <div class='footer'></div>
 
