修正首頁圖片

--- a/index.html
+++ b/index.html
@@ -29,11 +29,8 @@
     </div>
 
     <div class='cent'>
-      <div class='C_boxs'>
-        <div class='title_boxs'><img src="img/title2.png"></div>
-      </div>
-      <div class='CL'><img src="img/img03.png"></div>
-      <div class='CR'><img src="img/Big_img.png"></div>
+      <div class='CL'><img class='CLi' src="img/img03.png"></div>
+      <div class='CR'><img class='CRi' src="img/Big_img2.png"></div>
     </div>
 
     <div class='footer'></div>
