桌機：首頁＋內頁

--- a/news.html
+++ b/news.html
@@ -31,27 +31,39 @@
     <meta name="msapplication-TileImage" content="fav/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
   </head>
-  
+
   <body>
-    
-    <div class='top'>
-      <div class='menuboxs'>
-        <div><a href="news.html">最新消息</a></div>
-        <div><a href="about.html">關於燈會</a></div>
-        <div><a href="lantern.html">燈區介紹</a></div>
-        <div><a href="show.html">表演節目</a></div>
-        <div><a href="event.html">活動資訊</a></div>
-        <div><a href="traffic.html">交通資訊</a></div>
+    <!-- 上 -->
+    <div class='p_top'>
+      <div class='pt_L'>
+        <a href="index.html"><img src="img/ot_logo.png"></a>
       </div>
-      <div class='Ll'><img src="img/img01_L.png"></div>
-      <div class='Rl'><img src="img/img02_R.png"></div>
+
+      <div class='pt_C'>
+        <div class='pt_icon_boxs'>
+          <a href="" class='icon-instagram'></a>
+          <a href="" class='icon-download'></a>
+          <a href="" class='icon-facebook2'></a>
+        </div>
+        <div class='pt_menu_boxs'>
+          <div class='pt_menu'><a href="news.html">最新消息</a></div>
+          <div class='pt_menu'><a href="about.html">關於燈會</a></div>
+          <div class='pt_menu'><a href="lantern.html">燈區介紹</a></div>
+          <div class='pt_menu'><a href="show.html">表演節目</a></div>
+          <div class='pt_menu'><a href="event.html">活動資訊</a></div>
+          <div class='pt_menu'><a href="traffic.html">交通資訊</a></div>
+        </div>
+      </div>
+
+      <div class='pt_R'><img src="img/pink_tree.png"></div>
     </div>
 
-    <div class='cent'>
-      <div class='CL'><img class='CLi' src="img/img03.png"></div>
-      <div class='CR'><img class='CRi' src="img/Big_img2.png"></div>
+    <!-- 中 -->
+    <div class='p_cent'>
+      <div class='pc_boxs'></div>
     </div>
 
+    <!-- 下 -->
     <div class='footer'>
       <div class='fboxs'>
         <div class='f_types'>
