--- a/about.html
+++ b/about.html
@@ -64,12 +64,35 @@
     </div>
 
 
-    <div class='i_cent_boxs'>
-      <img class='in_mouse' src="img/in_image.png">
-      <img class='in_mouse_m' src="img/index_m.png">
+    <div class='cent_boxs'>
+      <div class='cent_box'>
+        <div class='tag_boxs'>
+          <a class='tag_a' href="index.html">首頁</a>
+          <a class='tag_a' href="about.html">關於桃園燈節</a>
+        </div>
+
+        <div class='page_cent'>
+          <div class='news_box'>
+            <div class='n_date'>關於桃園燈節</div>
+          </div>
+
+          <div class='news_box'>
+            <p class='p_title'>光之桃花源。燦爛桃園。曙光正靚</p>
+          </div>
+
+          <p class='p_cent_type padtop20'>
+            「忽逢桃花林，夾岸數百步，山有小口，彷彿若有光，便舍船，從口入」
+            </br></br>
+            鼠年為生肖之首，象徵一元複始萬象更新，2020桃園燈會的主視覺是以一年最初的曙光拉開序幕，透光曙光乍現落於桃園千塘之城閃耀的塘面，由成千上萬個埤塘折射出幻化繽紛的桃花林，由埤塘為元素所設計建構出的桃花源象徵人們心中的淨土匯集夢想之地，每個埤塘都代表乘載著來到桃園耕耘夢想的人們，在這座全台最年輕的桃園青春之都，每個桃園人都能在這裡循著光找到屬於自己的桃花源。
+          </p>
+
+          <img class='all_img' src="img/a01.jpg">
+        </div>
+      </div>
     </div>
 
-    <div class='in_footer'>
+
+    <div class='in_footer no_ma'>
       <div class='f_type_boxs'>
         <p class='f_type fw10 fwb'>指導單位：</p>
         <p class='f_type fw90'>桃園市政府、桃園市議會</p>
@@ -91,8 +114,8 @@
       </div>
     </div>
 
-    <div class="it_l"><img src="img/it_l.png"></div>
-    <div class="it_r"><img src="img/it_r.png"></div>
+    <div class="it_l"><img src="img/p_top_l.png"></div>
+    <div class="it_r"><img src="img/p_top_r.png"></div>
     <div class="if_l"><img src="img/if_l.png"></div>
     <div class="if_r"><img src="img/if_r.png"></div>
 
