--- a/event.html
+++ b/event.html
@@ -43,7 +43,7 @@
 
       <div class='i_menu'><a href="news.html">最新消息</a></div>
       <div class='i_menu'><a href="about.html">關於燈會</a></div>
-      <div class='i_menu'><a href="lantern_1.html">燈區介紹</a></div>
+      <div class='i_menu'><a href="lantern.html">燈區介紹</a></div>
       <div class='i_menu'><a href="show.html">表演節目</a></div>
       <div class='i_menu'><a href="event.html">活動資訊</a></div>
       <div class='i_menu'><a href="traffic.html">交通資訊</a></div>
@@ -64,12 +64,23 @@
     </div>
 
 
-    <div class='i_cent_boxs'>
-      <img class='in_mouse' src="img/in_image.png">
-      <img class='in_mouse_m' src="img/index_m.png">
+    <div class='cent_boxs'>
+      <div class='cent_box'>
+        <div class='tag_boxs'>
+          <a class='tag_a' href="index.html">首頁</a>
+          <a class='tag_a' href="event.html">活動資訊</a>
+        </div>
+
+        <div class='page_cent'>
+          <div class='news_box'>
+            <a class='n_titel n_outlink'>活動網站製作中</a>
+          </div>
+        </div>
+      </div>
     </div>
 
-    <div class='in_footer'>
+
+    <div class='in_footer no_ma'>
       <div class='f_type_boxs'>
         <p class='f_type fw10 fwb'>指導單位：</p>
         <p class='f_type fw90'>桃園市政府、桃園市議會</p>
@@ -91,8 +102,8 @@
       </div>
     </div>
 
-    <div class="it_l"><img src="img/it_l.png"></div>
-    <div class="it_r"><img src="img/it_r.png"></div>
+    <div class="it_l"><img src="img/p_top_l.png"></div>
+    <div class="it_r"><img src="img/p_top_r.png"></div>
     <div class="if_l"><img src="img/if_l.png"></div>
     <div class="if_r"><img src="img/if_r.png"></div>
 
