--- a/lantern_2.html
+++ b/lantern_2.html
@@ -64,12 +64,39 @@
     </div>
 
 
-    <div class='i_cent_boxs'>
-      <img class='in_mouse' src="img/in_image.png">
-      <img class='in_mouse_m' src="img/index_m.png">
+    <div class='cent_boxs'>
+      <div class='cent_box'>
+        <div class='tag_boxs'>
+          <a class='tag_a' href="index.html">首頁</a>
+          <a class='tag_a' href="lantern_1.html">燈區介紹</a>
+          <a class='tag_a' href="lantern_1.html">飛天曙(鼠)光燈區</a>
+        </div>
+
+        <div class='little_boxs'>
+          <a href="lantern_1.html" class='little03'>飛天曙(鼠)光燈區</a>
+          <a href="lantern_2.html" class='little03 l_ok'>大地曙(鼠)光燈區</a>
+          <a href="lantern_3.html" class='little03'>銀河曙(鼠)光燈區</a>
+        </div>
+
+        <div class='news_box'>
+          <div class='plan_boxs'><a href="">光之飛航秀</a></div>
+          <div class='plan_boxs'><a href="">光之森林</a></div>         
+        </div>
+
+        <div class='news_box'>
+          <p class='p_title'>大地曙(鼠)光燈區</p>
+        </div>
+
+        <p class='p_cent_type padtop20'>
+          展現「桃園大地花季、花彩大地」，以「花毯秀、雲彩、 花現大地、 城堡、光之鼠樂園、 歡迎光林、 夜市、 花園」等燈組，邀請民眾走入光明。
+        </p>
+
+        <img class='all_img' src="img/l02.jpg">
+      </div>
     </div>
 
-    <div class='in_footer'>
+
+    <div class='in_footer no_ma'>
       <div class='f_type_boxs'>
         <p class='f_type fw10 fwb'>指導單位：</p>
         <p class='f_type fw90'>桃園市政府、桃園市議會</p>
@@ -91,8 +118,8 @@
       </div>
     </div>
 
-    <div class="it_l"><img src="img/it_l.png"></div>
-    <div class="it_r"><img src="img/it_r.png"></div>
+    <div class="it_l"><img src="img/p_top_l.png"></div>
+    <div class="it_r"><img src="img/p_top_r.png"></div>
     <div class="if_l"><img src="img/if_l.png"></div>
     <div class="if_r"><img src="img/if_r.png"></div>
 
