內頁資料＋修正

--- a/show_1.html
+++ b/show_1.html
@@ -71,14 +71,27 @@
         <div class='tag_boxs'>
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="show.html">表演節目</a>
+          <a class='tag_a' href="show_1.html">巨龍秀</a>
         </div>
 
         <div class='little_boxs'>
-          <a href="show.html" class='little02 l_ok'>燈區節目表</a>
-          <a href="show_1.html" class='little02'>巨龍秀</a>
+          <a href="show.html" class='little02'>燈區節目表</a>
+          <a href="show_1.html" class='little02 l_ok'>巨龍秀</a>
           <a href="show_2.html" class='little02'>夜光踩街</a>
           <a href="show_3.html" class='little02'>曙(鼠)光樂團</a>
         </div>
+
+        <div class='news_box'>
+          <p class='p_title'>
+          【 首度來台、全台獨家 】</br>
+          高12公尺法國機械巨龍馬戲雜耍團隊—光之巨龍
+          </p>
+        </div>
+
+        <p class='add_type add_2 padtop20' title='演出場次：'>每晚三場次，每場次20-30分鐘</p>
+        <p class='add_type add_2 padtop20' title='演出時間：'>19:00、20:00、21:00</p>
+
+        <img class='all_img padtop20' src="img/s01.png">
       </div>
     </div>
 
