--- a/show_3.html
+++ b/show_3.html
@@ -74,10 +74,10 @@
         </div>
 
         <div class='little_boxs'>
-          <a href="show.html" class='little02 l_ok'>燈區節目表</a>
+          <a href="show.html" class='little02'>燈區節目表</a>
           <a href="show_1.html" class='little02'>巨龍秀</a>
           <a href="show_2.html" class='little02'>夜光踩街</a>
-          <a href="show_3.html" class='little02'>曙(鼠)光樂團</a>
+          <a href="show_3.html" class='little02 l_ok'>曙(鼠)光樂團</a>
         </div>
       </div>
     </div>
