--- a/traffic.html
+++ b/traffic.html
@@ -41,12 +41,13 @@
         <a href="" class='icon-facebook2'></a>
       </div>
 
+      <div class='i_menu'><a href="index.html">首&nbsp;&nbsp;頁</a></div>
       <div class='i_menu'><a href="news.html">最新消息</a></div>
       <div class='i_menu'><a href="about.html">關於燈會</a></div>
-      <div class='i_menu'><a href="lantern.html">燈區介紹</a></div>
+      <div class='i_menu'><a href="lantern_1.html">燈區介紹</a></div>
       <div class='i_menu'><a href="show.html">表演節目</a></div>
       <div class='i_menu'><a href="event.html">活動資訊</a></div>
-      <div class='i_menu'><a href="traffic.html">交通資訊</a></div>
+      <div class='i_menu'><a class='aac' href="traffic.html">交通資訊</a></div>
 
       <!-- mobile -->
       <div class='menu_list'>2020光之桃園・選單</div>
@@ -55,6 +56,7 @@
 
     <!-- mobile -->
     <div class='mobile_boxs no_show'>
+      <a href="index.html">首&nbsp;&nbsp;頁</a>
       <a href="news.html">最新消息</a>
       <a href="about.html">關於桃園燈節</a>
       <a href="lantern_1.html">燈區介紹</a>
@@ -93,7 +95,7 @@
 
       <div class='f_type_boxs'>
         <p class='f_type fw10 fwb'>協辦單位：</p>
-        <p class='f_type fw90'>行政院海岸巡防署海岸巡防總局、桃園市政府工務局、水務局、民政局、交通局、地政局、社會局、消防局、教育局、新聞處、經濟發展局、農業局衛生局、環境保護局、警察局、各區公所、桃園區經國國中、龜山區龜山國中、蘆竹區光明國中、光明國小、錦興國小、南崁高中</p>
+        <p class='f_type fw90'>桃園市政府人事處、工務局、文化局、水務局、民政局、交通局、社會局、消防局、教育局、經發局、農業局、養工處、新聞處、衛生局、環保局、警察局、中壢區公所、平鎮區公所、交通部鐵道局、桃園大眾捷運股份有限公司、桃園航空城股份有限公司、桃園市新住民聯合服務中心</p>
       </div>
 
       <div class='f_type_boxs'>
