--- a/about.html
+++ b/about.html
@@ -41,8 +41,9 @@
         <a href="" class='icon-facebook2'></a>
       </div>
 
+      <div class='i_menu'><a href="index.html">首&nbsp;&nbsp;頁</a></div>
       <div class='i_menu'><a href="news.html">最新消息</a></div>
-      <div class='i_menu'><a href="about.html">關於燈會</a></div>
+      <div class='i_menu'><a class='aac' href="about.html">關於燈會</a></div>
       <div class='i_menu'><a href="lantern_1.html">燈區介紹</a></div>
       <div class='i_menu'><a href="show.html">表演節目</a></div>
       <div class='i_menu'><a href="event.html">活動資訊</a></div>
@@ -55,6 +56,7 @@
 
     <!-- mobile -->
     <div class='mobile_boxs no_show'>
+      <a href="index.html">首&nbsp;&nbsp;頁</a>
       <a href="news.html">最新消息</a>
       <a href="about.html">關於桃園燈節</a>
       <a href="lantern_1.html">燈區介紹</a>
@@ -80,10 +82,12 @@
             <p class='p_title'>光之桃花源。燦爛桃園。曙光正靚</p>
           </div>
 
-          <p class='p_cent_type padtop20'>
+          <p class='p_cent_type pad20'>
             「忽逢桃花林，夾岸數百步，山有小口，彷彿若有光，便舍船，從口入」
             </br></br>
-            鼠年為生肖之首，象徵一元複始萬象更新，2020桃園燈會的主視覺是以一年最初的曙光拉開序幕，透光曙光乍現落於桃園千塘之城閃耀的塘面，由成千上萬個埤塘折射出幻化繽紛的桃花林，由埤塘為元素所設計建構出的桃花源象徵人們心中的淨土匯集夢想之地，每個埤塘都代表乘載著來到桃園耕耘夢想的人們，在這座全台最年輕的桃園青春之都，每個桃園人都能在這裡循著光找到屬於自己的桃花源。
+            鼠年為生肖之首，象徵一元復始萬象更新，2020桃園燈會的主視覺是以一年最初的曙光拉開序幕，透光曙光乍現落於桃園千塘之城閃耀的塘面，由成千上萬個埤塘折射出幻化繽紛的桃花林，由埤塘為元素所設計建構出的桃花源象徵人們心中的淨土匯集夢想之地，每個埤塘都代表乘載著來到桃園耕耘夢想的人們，在這座全台最年輕的桃園青春之都，每個桃園人都能在這裡循著光找到屬於自己的桃花源。
+            </br></br>
+            2020桃園燈會即將在1月31日正式開燈至2月12日，在平鎮新勢公園、中壢光明公園、老街溪河岸公園，將有更多創舉及精彩節目，讓我們拭目以待，期盼前來參與燈會的所有民眾，都能感受佳節的繽紛熱鬧，沉浸在光之桃花源。
           </p>
 
           <img class='all_img' src="img/a01.jpg">
@@ -105,7 +109,7 @@
 
       <div class='f_type_boxs'>
         <p class='f_type fw10 fwb'>協辦單位：</p>
-        <p class='f_type fw90'>行政院海岸巡防署海岸巡防總局、桃園市政府工務局、水務局、民政局、交通局、地政局、社會局、消防局、教育局、新聞處、經濟發展局、農業局衛生局、環境保護局、警察局、各區公所、桃園區經國國中、龜山區龜山國中、蘆竹區光明國中、光明國小、錦興國小、南崁高中</p>
+        <p class='f_type fw90'>桃園市政府人事處、工務局、文化局、水務局、民政局、交通局、社會局、消防局、教育局、經發局、農業局、養工處、新聞處、衛生局、環保局、警察局、中壢區公所、平鎮區公所、交通部鐵道局、桃園大眾捷運股份有限公司、桃園航空城股份有限公司、桃園市新住民聯合服務中心</p>
       </div>
 
       <div class='f_type_boxs'>
