--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <meta name="theme-color" content="#ffffff">
   </head>
   
-  <body>
+  <body class='index_he'>
     
     <div class='i_menu_boxs'>
       <div class='i_icon_boxs'>       
@@ -82,7 +82,7 @@
 
       <div class='f_type_boxs'>
         <p class='f_type fw10 fwb'>協辦單位：</p>
-        <p class='f_type fw90'>行政院海岸巡防署海岸巡防總局、桃園市政府工務局、水務局、民政局、交通局、地政局、社會局、消防局、教育局、新聞處、經濟發展局、農業局衛生局、環境保護局、警察局、各區公所、桃園區經國國中、龜山區龜山國中、蘆竹區光明國中、光明國小、錦興國小、南崁高中</p>
+        <p class='f_type fw90'>桃園市政府人事處、工務局、文化局、水務局、民政局、交通局、社會局、消防局、教育局、經發局、農業局、養工處、新聞處、衛生局、環保局、警察局、中壢區公所、平鎮區公所、交通部鐵道局、桃園大眾捷運股份有限公司、桃園航空城股份有限公司、桃園市新住民聯合服務中心</p>
       </div>
 
       <div class='f_type_boxs'>
