--- a/lantern_1.html
+++ b/lantern_1.html
@@ -41,9 +41,10 @@
         <a href="" class='icon-facebook2'></a>
       </div>
 
+      <div class='i_menu'><a href="index.html">首&nbsp;&nbsp;頁</a></div>
       <div class='i_menu'><a href="news.html">最新消息</a></div>
       <div class='i_menu'><a href="about.html">關於燈會</a></div>
-      <div class='i_menu'><a href="lantern_1.html">燈區介紹</a></div>
+      <div class='i_menu'><a class='aac' href="lantern_1.html">燈區介紹</a></div>
       <div class='i_menu'><a href="show.html">表演節目</a></div>
       <div class='i_menu'><a href="event.html">活動資訊</a></div>
       <div class='i_menu'><a href="traffic.html">交通資訊</a></div>
@@ -55,6 +56,7 @@
 
     <!-- mobile -->
     <div class='mobile_boxs no_show'>
+      <a href="index.html">首&nbsp;&nbsp;頁</a>
       <a href="news.html">最新消息</a>
       <a href="about.html">關於桃園燈節</a>
       <a href="lantern_1.html">燈區介紹</a>
@@ -79,15 +81,16 @@
         </div>
 
         <div class='news_box'>
-          <div class='plan_boxs'><a href="">光之飛航秀</a></div>
-          <div class='plan_boxs'><a href="">光之森林</a></div>         
+          <div class='plan_boxs'><a href="">其他燈區介紹準備中</a></div>        
         </div>
 
         <div class='news_box'>
           <p class='p_title'>飛天曙(鼠)光燈區</p>
         </div>
 
-        <p class='p_cent_type padtop20'>
+        <p class='add_type pad20' title='地點：'>平鎮新勢公園</p>
+
+        <p class='p_cent_type padbot20'>
           展現「桃園航空城、國門之都」，有「飛航秀、天幕、天橋、森林、 迷宮」及豐富光環境「閃傘動人、光之祈球、星海琉光、珠光落玉、 光之漫遊、 光之幻境」等燈組， 讓民眾沉浸在新勢公園的光環繞中。　　
         </p>
 
@@ -109,7 +112,7 @@
 
       <div class='f_type_boxs'>
         <p class='f_type fw10 fwb'>協辦單位：</p>
-        <p class='f_type fw90'>行政院海岸巡防署海岸巡防總局、桃園市政府工務局、水務局、民政局、交通局、地政局、社會局、消防局、教育局、新聞處、經濟發展局、農業局衛生局、環境保護局、警察局、各區公所、桃園區經國國中、龜山區龜山國中、蘆竹區光明國中、光明國小、錦興國小、南崁高中</p>
+        <p class='f_type fw90'>桃園市政府人事處、工務局、文化局、水務局、民政局、交通局、社會局、消防局、教育局、經發局、農業局、養工處、新聞處、衛生局、環保局、警察局、中壢區公所、平鎮區公所、交通部鐵道局、桃園大眾捷運股份有限公司、桃園航空城股份有限公司、桃園市新住民聯合服務中心</p>
       </div>
 
       <div class='f_type_boxs'>
