燈區照片上圖

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <a href="" class='icon-facebook2'></a>
       </div>
 
+      <div class='i_menu'><a class='aac' href="index.html">首&nbsp;&nbsp;頁</a></div>
       <div class='i_menu'><a href="news.html">最新消息</a></div>
       <div class='i_menu'><a href="about.html">關於燈會</a></div>
       <div class='i_menu'><a href="lantern_1.html">燈區介紹</a></div>
