--- a/lantern_305.html
+++ b/lantern_305.html
@@ -75,32 +75,36 @@
         </div>
 
         <div class='little_boxs'>
-          <a href="lantern_1.html" class='little03 l_ok'>飛天曙(鼠)光燈區</a>
+          <a href="lantern_1.html" class='little03'>飛天曙(鼠)光燈區</a>
           <a href="lantern_2.html" class='little03'>大地曙(鼠)光燈區</a>
-          <a href="lantern_3.html" class='little03'>銀河曙(鼠)光燈區</a>
+          <a href="lantern_3.html" class='little03 l_ok'>銀河曙(鼠)光燈區</a>
         </div>
 
         <div class='news_box'>
-          <div class='plan_boxs'><a href="lantern_101.html">光之天幕</a></div>
-          <div class='plan_boxs'><a href="lantern_102.html">光之迷宮</a></div>
-          <div class='plan_boxs'><a href="lantern_103.html">光之森林</a></div>
-          <div class='plan_boxs'><a href="lantern_104.html">光之祈球</a></div>
-          <div class='plan_boxs'><a href="lantern_105.html">飛天曙(鼠)光秀</a></div>
-          <div class='plan_boxs'><a href="lantern_106.html">傘閃動人</a></div>
-          <div class='plan_boxs'><a href="lantern_107.html">麒麟迎賓</a></div>
+          <div class='plan_boxs'><a href="lantern_301.html">天使之翼</a></div>
+          <div class='plan_boxs'><a href="lantern_302.html">水漾桃源</a></div>
+          <div class='plan_boxs'><a href="lantern_303.html">生生不息</a></div>
+          <div class='plan_boxs'><a href="lantern_304.html">光之啟程</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="lantern_305.html">光影之窗</a></div>
+          <div class='plan_boxs'><a href="lantern_306.html">希望風吹</a></div>
+          <div class='plan_boxs'><a href="lantern_307.html">幸福銀河</a></div>
+          <div class='plan_boxs'><a href="lantern_308.html">星光流域</a></div>
+          <div class='plan_boxs'><a href="lantern_309.html">飛絮重生</a></div>
+          <div class='plan_boxs'><a href="lantern_310.html">積木幻彩迴廊</a></div>
+          <div class='plan_boxs'><a href="lantern_311.html">幻彩迎賓</a></div>
         </div>
 
         <div class='news_box'>
-          <p class='p_title'>飛天曙(鼠)光燈區</p>
+          <p class='p_title'>光影之窗</p>
         </div>
 
-        <p class='add_type pad20' title='地點：'>平鎮新勢公園</p>
+        <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
 
-        <p class='p_cent_type padbot20'>
-          展現「桃園航空城、國門之都」，有「飛航秀、天幕、天橋、森林、 迷宮」及豐富光環境「閃傘動人、光之祈球、星海琉光、珠光落玉、 光之漫遊、 光之幻境」等燈組， 讓民眾沉浸在新勢公園的光環繞中。　　
+        <p class='p_cent_type pad20'>
+          文字候補
         </p>
 
-        <img class='all_img' src="img/l01.jpg">
+        <img class='all_img' src="img/l03_05.png">
       </div>
     </div>
 
