--- a/lantern_2.html
+++ b/lantern_2.html
@@ -81,7 +81,11 @@
         </div>
 
         <div class='news_box'>
-          <div class='plan_boxs'><a href="">其他燈區介紹準備中</a></div>       
+          <div class='plan_boxs'><a href="lantern_201.html">光之夜市</a></div>
+          <div class='plan_boxs'><a href="lantern_202.html">光之花毯秀</a></div>
+          <div class='plan_boxs'><a href="lantern_203.html">光之涼亭</a></div>
+          <div class='plan_boxs'><a href="lantern_204.html">燈會迎賓</a></div>
+          <div class='plan_boxs'><a href="lantern_205.html">歡迎光林</a></div>
         </div>
 
         <div class='news_box'>
