--- a/lantern_202.html
+++ b/lantern_202.html
@@ -75,32 +75,30 @@
         </div>
 
         <div class='little_boxs'>
-          <a href="lantern_1.html" class='little03 l_ok'>飛天曙(鼠)光燈區</a>
-          <a href="lantern_2.html" class='little03'>大地曙(鼠)光燈區</a>
+          <a href="lantern_1.html" class='little03'>飛天曙(鼠)光燈區</a>
+          <a href="lantern_2.html" class='little03 l_ok'>大地曙(鼠)光燈區</a>
           <a href="lantern_3.html" class='little03'>銀河曙(鼠)光燈區</a>
         </div>
 
         <div class='news_box'>
-          <div class='plan_boxs'><a href="lantern_101.html">光之天幕</a></div>
-          <div class='plan_boxs'><a href="lantern_102.html">光之迷宮</a></div>
-          <div class='plan_boxs'><a href="lantern_103.html">光之森林</a></div>
-          <div class='plan_boxs'><a href="lantern_104.html">光之祈球</a></div>
-          <div class='plan_boxs'><a href="lantern_105.html">飛天曙(鼠)光秀</a></div>
-          <div class='plan_boxs'><a href="lantern_106.html">傘閃動人</a></div>
-          <div class='plan_boxs'><a href="lantern_107.html">麒麟迎賓</a></div>
+          <div class='plan_boxs'><a href="lantern_201.html">光之夜市</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="lantern_202.html">光之花毯秀</a></div>
+          <div class='plan_boxs'><a href="lantern_203.html">光之涼亭</a></div>
+          <div class='plan_boxs'><a href="lantern_204.html">燈會迎賓</a></div>
+          <div class='plan_boxs'><a href="lantern_205.html">歡迎光林</a></div>
         </div>
 
         <div class='news_box'>
-          <p class='p_title'>飛天曙(鼠)光燈區</p>
+          <p class='p_title'>光之花毯秀</p>
         </div>
 
-        <p class='add_type pad20' title='地點：'>平鎮新勢公園</p>
+        <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
 
-        <p class='p_cent_type padbot20'>
-          展現「桃園航空城、國門之都」，有「飛航秀、天幕、天橋、森林、 迷宮」及豐富光環境「閃傘動人、光之祈球、星海琉光、珠光落玉、 光之漫遊、 光之幻境」等燈組， 讓民眾沉浸在新勢公園的光環繞中。　　
+        <p class='p_cent_type pad20'>
+          文字候補
         </p>
 
-        <img class='all_img' src="img/l01.jpg">
+        <img class='all_img' src="img/l02_02.png">
       </div>
     </div>
 
