--- a/lantern_3.html
+++ b/lantern_3.html
@@ -81,7 +81,17 @@
         </div>
 
         <div class='news_box'>
-          <div class='plan_boxs'><a href="">其他燈區介紹準備中</a></div>
+          <div class='plan_boxs'><a href="lantern_301.html">天使之翼</a></div>
+          <div class='plan_boxs'><a href="lantern_302.html">水漾桃源</a></div>
+          <div class='plan_boxs'><a href="lantern_303.html">生生不息</a></div>
+          <div class='plan_boxs'><a href="lantern_304.html">光之啟程</a></div>
+          <div class='plan_boxs'><a href="lantern_305.html">光影之窗</a></div>
+          <div class='plan_boxs'><a href="lantern_306.html">希望風吹</a></div>
+          <div class='plan_boxs'><a href="lantern_307.html">幸福銀河</a></div>
+          <div class='plan_boxs'><a href="lantern_308.html">星光流域</a></div>
+          <div class='plan_boxs'><a href="lantern_309.html">飛絮重生</a></div>
+          <div class='plan_boxs'><a href="lantern_310.html">積木幻彩迴廊</a></div>
+          <div class='plan_boxs'><a href="lantern_311.html">幻彩迎賓</a></div>
         </div>
 
         <div class='news_box'>
@@ -91,10 +101,10 @@
         <p class='add_type pad20' title='地點：'>老街溪及河岸公園</p>
 
         <p class='p_cent_type padbot20'>
-          敘述文字準備中。
+          文字候補
         </p>
 
-        <img class='all_img' src="img/l02.jpg">
+        <img class='all_img' src="img/l03.jpg">
       </div>
     </div>
 
