表演節目補完

--- a/event.html
+++ b/event.html
@@ -71,12 +71,13 @@
         <div class='tag_boxs'>
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="event.html">活動資訊</a>
+          <!-- <a class='tag_a' href="event.html">特色活動</a> -->
         </div>
 
-        <div class='page_cent'>
-          <div class='news_box'>
-            <a class='n_titel n_outlink'>活動網站製作中</a>
-          </div>
+         <div class='news_box'>
+          <p class='p_title'>
+            資訊待補。
+          </p>
         </div>
       </div>
     </div>
