--- a/lantern_104.html
+++ b/lantern_104.html
@@ -72,6 +72,7 @@
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="lantern_1.html">燈區介紹</a>
           <a class='tag_a' href="lantern_1.html">飛天曙(鼠)光燈區</a>
+          <a class='tag_a' href="lantern_104.html">光之祈球</a>
         </div>
 
         <div class='little_boxs'>
