--- a/lantern_302.html
+++ b/lantern_302.html
@@ -71,7 +71,8 @@
         <div class='tag_boxs'>
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="lantern_1.html">燈區介紹</a>
-          <a class='tag_a' href="lantern_1.html">飛天曙(鼠)光燈區</a>
+          <a class='tag_a' href="lantern_3.html">銀河曙(鼠)光燈區</a>
+          <a class='tag_a' href="lantern_302.html">水漾桃源</a>
         </div>
 
         <div class='little_boxs'>
