--- a/show_0.html
+++ b/show_0.html
@@ -71,7 +71,7 @@
         <div class='tag_boxs'>
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="show.html">表演節目</a>
-          <a class='tag_a' href="show.html">新勢公園節目表</a>
+          <a class='tag_a' href="show_0.html">光明公園節目表</a>
         </div>
 
         <div class='little_boxs'>
@@ -82,8 +82,8 @@
         </div>
 
         <div class='news_box'>
-          <div class='plan_boxs'><a class='plan_ok' href="show.html">新勢公園節目表</a></div>
-          <div class='plan_boxs'><a href="show_0.html">光明公園節目表</a></div>
+          <div class='plan_boxs'><a href="show.html">新勢公園節目表</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="show_0.html">光明公園節目表</a></div>
         </div>
 
         <div class='news_box pad20'>
@@ -96,9 +96,9 @@
           <div class='program_box'>
             <div class='program_date'>1月31日(五)</div>
             <div class='program_list'>
-              <div class='pl_boxs'><p>18：30 - 19：30</p><p>開幕晚會・曙光樂團</p></div>
-              <div class='pl_boxs'><p>19：30 - 20：30</p><p>Skyline 爵士樂團</p></div>
-              <div class='pl_boxs'><p>20：30 - 21：30</p><p>三十萬年老虎鉗樂團</p></div>
+              <div class='pl_boxs'><p>18：30 - 19：30</p><p>蔡興國VS印加樂團</p></div>
+              <div class='pl_boxs'><p>19：30 - 20：30</p><p>傑克魔術秀</p></div>
+              <div class='pl_boxs'><p>20：30 - 21：30</p><p>韓國・極光亂打秀</p></div>
             </div>
           </div>
 
@@ -106,9 +106,9 @@
           <div class='program_box'>
             <div class='program_date'>2月1日(六)</div>
             <div class='program_list'>
-              <div class='pl_boxs'><p>18：30 - 19：30</p><p>旋風英國搖滾樂團</p></div>
-              <div class='pl_boxs'><p>19：30 - 20：30</p><p>韓國・擊光亂打秀</p></div>
-              <div class='pl_boxs'><p>20：30 - 21：30</p><p>丘與樂樂團</p></div>
+              <div class='pl_boxs'><p>18：30 - 19：30</p><p>民歌手・古勝中</p></div>
+              <div class='pl_boxs'><p>19：30 - 20：30</p><p>喬克叔叔魔術</p></div>
+              <div class='pl_boxs'><p>20：30 - 21：30</p><p>小丑氣球歡樂秀</p></div>
             </div>
           </div>
 
@@ -116,9 +116,9 @@
           <div class='program_box'>
             <div class='program_date'>2月2日(日)</div>
             <div class='program_list'>
-              <div class='pl_boxs'><p>18：30 - 19：30</p><p>Ocean 海洋拉美騷莎樂團</p></div>
-              <div class='pl_boxs'><p>19：30 - 20：30</p><p>愛浪漫女子樂團</p></div>
-              <div class='pl_boxs'><p>20：30 - 21：30</p><p>爽樂團</p></div>
+              <div class='pl_boxs'><p>18：30 - 19：30</p><p>奔跑的大象</p></div>
+              <div class='pl_boxs'><p>19：30 - 20：30</p><p>奇幻魔術BUBBLE泡泡秀</p></div>
+              <div class='pl_boxs'><p>20：30 - 21：30</p><p>蔡興國VS烏克天空樂團</p></div>
             </div>
           </div>
 
@@ -126,9 +126,9 @@
           <div class='program_box'>
             <div class='program_date'>2月3日(一)</div>
             <div class='program_list'>
-              <div class='pl_boxs'><p>18：30 - 19：30</p><p>荷爾蒙少年 Hormone Boys</p></div>
-              <div class='pl_boxs'><p>19：30 - 20：30</p><p>傑克魔術秀</p></div>
-              <div class='pl_boxs'><p>20：30 - 21：30</p><p>美洲Buggie Blues樂團</p></div>
+              <div class='pl_boxs'><p>18：30 - 19：30</p><p>荷風吹風吹薩克斯風快樂・柯信隆</p></div>
+              <div class='pl_boxs'><p>19：30 - 20：30</p><p>法墨兒佛拉明哥同好會B組</p></div>
+              <div class='pl_boxs'><p>20：30 - 21：30</p><p>六金釵女子樂團</p></div>
             </div>
           </div>
 
@@ -136,9 +136,9 @@
           <div class='program_box'>
             <div class='program_date'>2月4日(二)</div>
             <div class='program_list'>
-              <div class='pl_boxs'><p>18：30 - 19：30</p><p>Bloody Sweety樂團</p></div>
-              <div class='pl_boxs'><p>19：30 - 20：30</p><p>真愛家庭</p></div>
-              <div class='pl_boxs'><p>20：30 - 21：30</p><p>DizLike女子樂團</p></div>
+              <div class='pl_boxs'><p>18：30 - 19：30</p><p>賞鑫樂團</p></div>
+              <div class='pl_boxs'><p>19：30 - 20：30</p><p>愛浪漫女子樂團</p></div>
+              <div class='pl_boxs'><p>20：30 - 21：30</p><p>百合舞蹈藝術團</p></div>
             </div>
           </div>
 
@@ -146,9 +146,9 @@
           <div class='program_box'>
             <div class='program_date'>2月5日(三)</div>
             <div class='program_list'>
-              <div class='pl_boxs'><p>18：30 - 19：30</p><p>法國紅磨坊・賭城秀舞團</p></div>
-              <div class='pl_boxs'><p>19：30 - 20：30</p><p>創作歌手・鍾傑</p></div>
-              <div class='pl_boxs'><p>20：30 - 21：30</p><p>蔡興國VS烏克天空樂團</p></div>
+              <div class='pl_boxs'><p>18：30 - 19：30</p><p>快樂歌手樂團</p></div>
+              <div class='pl_boxs'><p>19：30 - 20：30</p><p>Bloody Sweety樂團</p></div>
+              <div class='pl_boxs'><p>20：30 - 21：30</p><p>Happy Feet樂團</p></div>
             </div>
           </div>
 
@@ -156,9 +156,9 @@
           <div class='program_box'>
             <div class='program_date'>2月6日(四)</div>
             <div class='program_list'>
-              <div class='pl_boxs'><p>18：30 - 19：30</p><p>六金釵女子樂團</p></div>
-              <div class='pl_boxs'><p>19：30 - 20：30</p><p>JJ原木樂團</p></div>
-              <div class='pl_boxs'><p>20：30 - 21：30</p><p>金曲歌手・欒克勇</p></div>
+              <div class='pl_boxs'><p>18：30 - 19：30</p><p>客庄采風舞團</p></div>
+              <div class='pl_boxs'><p>19：30 - 20：30</p><p>天籟之音女子樂團</p></div>
+              <div class='pl_boxs'><p>20：30 - 21：30</p><p>創作歌手・鍾傑</p></div>
             </div>
           </div>
 
@@ -166,9 +166,9 @@
           <div class='program_box'>
             <div class='program_date'>2月7日(五)</div>
             <div class='program_list'>
-              <div class='pl_boxs'><p>18：30 - 19：30</p><p>3JAM客</p></div>
-              <div class='pl_boxs'><p>19：30 - 20：30</p><p>Bloody Sweety樂團</p></div>
-              <div class='pl_boxs'><p>20：30 - 21：30</p><p>搖滾大嬸 Auntie Roxy樂團</p></div>
+              <div class='pl_boxs'><p>18：30 - 19：30</p><p>趙仲榮小丑魔術秀</p></div>
+              <div class='pl_boxs'><p>19：30 - 20：30</p><p>東方樂團</p></div>
+              <div class='pl_boxs'><p>20：30 - 21：30</p><p>老男孩</p></div>
             </div>
           </div>
 
@@ -176,9 +176,9 @@
           <div class='program_box'>
             <div class='program_date'>2月8日(六)</div>
             <div class='program_list'>
-              <div class='pl_boxs'><p>18：30 - 19：30</p><p>四枝筆樂團 Four Pens</p></div>
-              <div class='pl_boxs'><p>19：30 - 20：30</p><p>迷舞</p></div>
-              <div class='pl_boxs'><p>20：30 - 21：30</p><p>吻我吧Besame墨西哥樂團</p></div>
+              <div class='pl_boxs'><p>18：30 - 19：30</p><p>輕鬆戀樂團(So Relax)</p></div>
+              <div class='pl_boxs'><p>19：30 - 20：30</p><p>鼓動打擊樂團</p></div>
+              <div class='pl_boxs'><p>20：30 - 21：30</p><p>LonelyElmo樂團</p></div>
             </div>
           </div>
 
@@ -186,9 +186,9 @@
           <div class='program_box'>
             <div class='program_date'>2月9日(日)</div>
             <div class='program_list'>
-              <div class='pl_boxs'><p>18：30 - 19：30</p><p>Skyline 爵士樂團</p></div>
-              <div class='pl_boxs'><p>19：30 - 20：30</p><p>負抗體</p></div>
-              <div class='pl_boxs'><p>20：30 - 21：30</p><p>黃少谷與本獸樂團</p></div>
+              <div class='pl_boxs'><p>18：30 - 19：30</p><p>蔡興國VS烏克天空樂團</p></div>
+              <div class='pl_boxs'><p>19：30 - 20：30</p><p>迷舞</p></div>
+              <div class='pl_boxs'><p>20：30 - 21：30</p><p>瑪啡因樂團</p></div>
             </div>
           </div>
 
@@ -196,9 +196,9 @@
           <div class='program_box'>
             <div class='program_date'>2月10日(一)</div>
             <div class='program_list'>
-              <div class='pl_boxs'><p>18：30 - 19：30</p><p>Manjago非洲鼓舞團</p></div>
-              <div class='pl_boxs'><p>19：30 - 20：30</p><p>天籟之音女子樂團</p></div>
-              <div class='pl_boxs'><p>20：30 - 21：30</p><p>MRG馬戲特技團</p></div>
+              <div class='pl_boxs'><p>18：30 - 19：30</p><p>真愛家庭</p></div>
+              <div class='pl_boxs'><p>19：30 - 20：30</p><p>驚奇變臉魔術秀</p></div>
+              <div class='pl_boxs'><p>20：30 - 21：30</p><p>負抗體</p></div>
             </div>
           </div>
 
@@ -206,9 +206,9 @@
           <div class='program_box'>
             <div class='program_date'>2月11日(二)</div>
             <div class='program_list'>
-              <div class='pl_boxs'><p>18：30 - 19：30</p><p>法國香頌歌舞秀</p></div>
-              <div class='pl_boxs'><p>19：30 - 20：30</p><p>真愛家庭</p></div>
-              <div class='pl_boxs'><p>20：30 - 21：30</p><p>ROSY玫瑰紅</p></div>
+              <div class='pl_boxs'><p>18：30 - 19：30</p><p>周美蒂</p></div>
+              <div class='pl_boxs'><p>19：30 - 20：30</p><p>輕鬆談樂團</p></div>
+              <div class='pl_boxs'><p>20：30 - 21：30</p><p>爽樂團</p></div>
             </div>
           </div>
 
@@ -216,9 +216,9 @@
           <div class='program_box'>
             <div class='program_date'>2月12日(三)</div>
             <div class='program_list'>
-              <div class='pl_boxs'><p>18：30 - 19：30</p><p>拉丁森巴樂舞團</p></div>
-              <div class='pl_boxs'><p>19：30 - 20：30</p><p>The TicTAC樂團</p></div>
-              <div class='pl_boxs'><p>20：30 - 21：30</p><p>蔡興國VS印加樂團</p></div>
+              <div class='pl_boxs'><p>18：30 - 19：30</p><p>宇多田爵士樂團</p></div>
+              <div class='pl_boxs'><p>19：30 - 20：30</p><p>三十萬年老虎鉗樂團</p></div>
+              <div class='pl_boxs'><p>20：30 - 21：30</p><p>閉幕晚會・曙光樂團</p></div>
             </div>
           </div>
         </div>
