--- a/show_3.html
+++ b/show_3.html
@@ -71,6 +71,8 @@
         <div class='tag_boxs'>
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="show.html">表演節目</a>
+          <a class='tag_a' href="show_3.html">曙(鼠)光樂團</a>
+          <a class='tag_a' href="show_3.html">曙光Light Up・歌詞</a>
         </div>
 
         <div class='little_boxs'>
@@ -79,6 +81,44 @@
           <a href="show_2.html" class='little02'>夜光踩街</a>
           <a href="show_3.html" class='little02 l_ok'>曙(鼠)光樂團</a>
         </div>
+
+        <div class='news_box'>
+          <div class='plan_boxs'><a class='plan_ok' href="show_3.html">曙光Light Up・歌詞</a></div>
+          <div class='plan_boxs'><a href="show_3_01.html">曙(鼠)光樂團・介紹</a></div>
+        </div>
+
+        <div class='news_box'>
+          <p class='p_title'>燈會專屬【曙光樂團】創作、演唱【桃園燈會主題曲】！</p>
+        </div>
+
+        <div class='news_box'>
+          <p class='p_title p_pink'>曙光Light Up</p>
+        </div>
+
+        <p class='add_type pad20 add_3'>詞曲＼陳進中</p>
+
+        <p class='add_type padbot20 add_3'>
+          曙光&nbsp;&nbsp;充滿著希望&nbsp;&nbsp;迎接新的方向&nbsp;&nbsp;不怕</br>
+          讓我看到你在閃閃發光</br>
+          溫暖了心房&nbsp;&nbsp;鼓起了胸膛&nbsp;&nbsp;一起發出最燦爛的曙光</br>
+          </br></br>
+          忘記&nbsp;&nbsp;悲傷&nbsp;&nbsp;走過了會成長</br>
+          堅定&nbsp;&nbsp;你的力量&nbsp;&nbsp;用盡全力__往前闖</br>
+          相信&nbsp;&nbsp;你的夢想</br>
+          不要絕望&nbsp;&nbsp;不要徬徨&nbsp;&nbsp;去吧</br>
+          無時無刻謹記爸媽說過的話&nbsp;&nbsp;帶著勇敢的心奮力出發</br>
+          </br></br>
+          曙光&nbsp;&nbsp;充滿著希望&nbsp;&nbsp;迎接新的方向&nbsp;&nbsp;不怕</br>
+          讓我看到你在閃閃發光</br>
+          溫暖了心房&nbsp;&nbsp;鼓起了胸膛&nbsp;&nbsp;一起發出最燦爛的曙光</br>
+          </br></br>
+          長夜的黑&nbsp;&nbsp;讓你感到迷惘</br>
+          請不要絕望&nbsp;&nbsp;還有我在身旁&nbsp;&nbsp;喔~~~</br>
+          </br></br>
+          曙光&nbsp;&nbsp;充滿著希望&nbsp;&nbsp;迎接新的方向&nbsp;&nbsp;不怕</br>
+          讓我看到你在閃閃發光</br>
+          溫暖了心房&nbsp;&nbsp;鼓起了胸膛&nbsp;&nbsp;一起發出最燦爛的曙光</br>
+        </p>
       </div>
     </div>
 
