--- a/show_3_01.html
+++ b/show_3_01.html
@@ -71,25 +71,70 @@
         <div class='tag_boxs'>
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="show.html">表演節目</a>
-          <a class='tag_a' href="show_2.html">夜光踩街</a>
+          <a class='tag_a' href="show_3.html">曙(鼠)光樂團</a>
+          <a class='tag_a' href="show_3.html">曙(鼠)光樂團・介紹</a>
         </div>
 
         <div class='little_boxs'>
           <a href="show.html" class='little02'>燈區節目表</a>
           <a href="show_1.html" class='little02'>巨龍秀</a>
-          <a href="show_2.html" class='little02 l_ok'>夜光踩街</a>
-          <a href="show_3.html" class='little02'>曙(鼠)光樂團</a>
+          <a href="show_2.html" class='little02'>夜光踩街</a>
+          <a href="show_3.html" class='little02 l_ok'>曙(鼠)光樂團</a>
         </div>
 
         <div class='news_box'>
-          <p class='p_title'>
-          全新創作夜光定目踩街秀—老鼠娶親
-          </p>
+          <div class='plan_boxs'><a href="show_3.html">曙光Light Up・歌詞</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="show_3_01.html">曙(鼠)光樂團・介紹</a></div>
         </div>
 
-        <p class='add_type add_2 padtop20' title='演出場次：'>每晚三場次，每場次20-30分鐘</p>
+        <div class='news_box'>
+          <p class='p_title'>曙(鼠)光樂團</p>
+        </div>
 
-        <img class='all_img padtop20' src="img/s02.png">
+        <div class='show_boxs'>
+          <div class='show_box'>
+            <div class='sb_l'><img src="img/s04_1.png"></div>
+            <div class='sb_r'>
+              <div class='s_name'>黃少谷</div>
+              <div class='s_type'>
+                前強辯樂團主唱兼吉他手、龍之家族吉他手，在2017年10月推出個人首張全創作專輯「未來」。2015年10月31日參與錄製電視節目全球中文音樂榜。
+              </div>
+            </div>
+          </div>
+
+          <div class='show_box'>
+            <div class='sb_l'><img src="img/s04_2.png"></div>
+            <div class='sb_r'>
+              <div class='s_name'>陳曼青</div>
+              <div class='s_type'>
+                台灣桃園市 客家人，擁有一半阿美族血統，曾參加台視第二屆《超級偶像》，並進入29強、與中視第六屆《超級星光大道》歌唱選秀節目，最終獲得第九名的佳績。曾經也是年代MUCH台選秀節目《Fighting吧!天團》中選秀團體《Whaaaaas UP！》團員。
+              </div>
+            </div>
+          </div>
+
+          <div class='show_box'>
+            <div class='sb_l'><img src="img/s04_3.png"></div>
+            <div class='sb_r'>
+              <div class='s_name'>紅&nbsp;&nbsp;中</div>
+              <div class='s_type'>
+                爽樂團主唱，前身為「台灣爽樂團」，於2018年2月28日改為現名， 成員為主唱紅中、團長/鍵盤手小樂、貝斯手禮義、吉他手維軒。該樂團三人都是中壢人，另外一人也在當地生活多年，曾參加多場比賽，亦曾獲得一些獎項。
+              </div>
+            </div>
+          </div>
+
+          <div class='show_box'>
+            <div class='sb_l'><img src="img/s04_4.png"></div>
+            <div class='sb_r'>
+              <div class='s_name'>許莉潔</div>
+              <div class='s_type'>
+                選秀節目「聲林之王」第一屆季軍。從3000人海選中過關斬將進入比賽， 初次登場就被林宥嘉稱讚： 「音準都不用TUNE 。」更讓楊丞琳讚不絕口！演唱〈不為誰而作的歌〉， 一句「夢想不分高矮胖瘦」讓觀眾十分感動，更奪下該集MVP!
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+        <!-- <iframe src="//player.bilibili.com/player.html?aid=56113826&cid=98081785&page=1" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"> </iframe> -->
       </div>
     </div>
 
@@ -122,4 +167,4 @@
     <div class="if_r"><img src="img/if_r.png"></div>
 
   </body>
-</html>
+</html>ㄋ
