--- a/lantern_202.html
+++ b/lantern_202.html
@@ -71,7 +71,8 @@
         <div class='tag_boxs'>
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="lantern_1.html">燈區介紹</a>
-          <a class='tag_a' href="lantern_1.html">飛天曙(鼠)光燈區</a>
+          <a class='tag_a' href="lantern_2.html">大地曙(鼠)光燈區</a>
+          <a class='tag_a' href="lantern_202.html">光之花毯秀</a>
         </div>
 
         <div class='little_boxs'>
