--- a/traffic.html
+++ b/traffic.html
@@ -75,7 +75,9 @@
 
         <div class='page_cent'>
           <div class='news_box'>
-            <a class='n_titel n_outlink'>活動網站製作中</a>
+            <p class='p_title'>
+              資訊待補。
+            </p>
           </div>
         </div>
       </div>
