--- a/show_0.html
+++ b/show_0.html
@@ -78,7 +78,7 @@
           <a href="show.html" class='little02 l_ok'>燈區節目表</a>
           <a href="show_1.html" class='little02'>巨龍秀</a>
           <a href="show_2.html" class='little02'>夜光踩街</a>
-          <a href="show_3.html" class='little02'>曙(鼠)光樂團</a>
+          <a href="show_3_01.html" class='little02'>曙(鼠)光樂團</a>
         </div>
 
         <div class='news_box'>
@@ -126,7 +126,7 @@
           <div class='program_box'>
             <div class='program_date'>2月3日(一)</div>
             <div class='program_list'>
-              <div class='pl_boxs'><p>18：30 - 19：30</p><p>荷風吹風吹薩克斯風快樂・柯信隆</p></div>
+              <div class='pl_boxs'><p>18：30 - 19：30</p><p>風吹風吹薩克斯風快樂・柯信隆</p></div>
               <div class='pl_boxs'><p>19：30 - 20：30</p><p>法墨兒佛拉明哥同好會B組</p></div>
               <div class='pl_boxs'><p>20：30 - 21：30</p><p>六金釵女子樂團</p></div>
             </div>
@@ -244,11 +244,6 @@
       <div class='f_type_boxs'>
         <p class='f_type fw10 fwb'>協辦單位：</p>
         <p class='f_type fw90'>桃園市政府人事處、工務局、文化局、水務局、民政局、交通局、社會局、消防局、教育局、經發局、農業局、養工處、新聞處、衛生局、環保局、警察局、中壢區公所、平鎮區公所、交通部鐵道局、桃園大眾捷運股份有限公司、桃園航空城股份有限公司、桃園市新住民聯合服務中心</p>
-      </div>
-
-      <div class='f_type_boxs'>
-        <p class='f_type fw10 fwb'>參與單位：</p>
-        <p class='f_type fw90'>Uniqlo桃園春日路店、五福夜市、世界先進積體電路(股)公司、台茂購物中心、桃園市桃園區小檜溪暨埔子自辦市地重劃區重劃會、家樂福桃園店</p>
       </div>
     </div>
 
