--- a/lantern_104.html
+++ b/lantern_104.html
@@ -72,7 +72,7 @@
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="lantern_1.html">燈區介紹</a>
           <a class='tag_a' href="lantern_1.html">飛天曙(鼠)光燈區</a>
-          <a class='tag_a' href="lantern_104.html">光之祈球</a>
+          <a class='tag_a' href="lantern_104.html">飛天曙(鼠)光秀</a>
         </div>
 
         <div class='little_boxs'>
@@ -82,17 +82,25 @@
         </div>
 
         <div class='news_box'>
-          <div class='plan_boxs'><a href="lantern_101.html">光之天幕</a></div>
-          <div class='plan_boxs'><a href="lantern_102.html">光之迷宮</a></div>
-          <div class='plan_boxs'><a href="lantern_103.html">光之森林</a></div>
-          <div class='plan_boxs'><a class='plan_ok' href="lantern_104.html">光之祈球</a></div>
-          <div class='plan_boxs'><a href="lantern_105.html">飛天曙(鼠)光秀</a></div>
-          <div class='plan_boxs'><a href="lantern_106.html">傘閃動人</a></div>
-          <div class='plan_boxs'><a href="lantern_107.html">麒麟迎賓</a></div>
+          <div class='plan_boxs'><a href="lantern_101.html">光之飛航秀</a></div>
+          <div class='plan_boxs'><a href="lantern_102.html">光之森林</a></div>
+          <div class='plan_boxs'><a href="lantern_103.html">光之迷宮</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="lantern_104.html">飛天曙(鼠)光秀</a></div>
+          <div class='plan_boxs'><a href="lantern_105.html">麒麟迎賓</a></div>
+          <div class='plan_boxs'><a href="lantern_106.html">光之天幕</a></div>
+          <div class='plan_boxs'><a href="lantern_107.html">光之天橋</a></div>
+          <div class='plan_boxs'><a href="lantern_108.html">光之幻境</a></div>
+          <div class='plan_boxs'><a href="lantern_109.html">鼠光正亮</a></div>
+          <div class='plan_boxs'><a href="lantern_110.html">閃傘動人</a></div>
+          <div class='plan_boxs'><a href="lantern_111.html">光之祈球</a></div>
+          <div class='plan_boxs'><a href="lantern_112.html">星海琉光</a></div>
+          <div class='plan_boxs'><a href="lantern_113.html">珠光落玉</a></div>
+          <div class='plan_boxs'><a href="lantern_114.html">光之漫遊</a></div>
+          <div class='plan_boxs'><a href="lantern_115.html">翠堤之光</a></div>
         </div>
 
         <div class='news_box'>
-          <p class='p_title'>光之祈球</p>
+          <p class='p_title'>飛天曙(鼠)光秀</p>
         </div>
 
         <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
@@ -120,11 +128,6 @@
       <div class='f_type_boxs'>
         <p class='f_type fw10 fwb'>協辦單位：</p>
         <p class='f_type fw90'>桃園市政府人事處、工務局、文化局、水務局、民政局、交通局、社會局、消防局、教育局、經發局、農業局、養工處、新聞處、衛生局、環保局、警察局、中壢區公所、平鎮區公所、交通部鐵道局、桃園大眾捷運股份有限公司、桃園航空城股份有限公司、桃園市新住民聯合服務中心</p>
-      </div>
-
-      <div class='f_type_boxs'>
-        <p class='f_type fw10 fwb'>參與單位：</p>
-        <p class='f_type fw90'>Uniqlo桃園春日路店、五福夜市、世界先進積體電路(股)公司、台茂購物中心、桃園市桃園區小檜溪暨埔子自辦市地重劃區重劃會、家樂福桃園店</p>
       </div>
     </div>
 
