--- a/lantern_110.html
+++ b/lantern_110.html
@@ -71,26 +71,36 @@
         <div class='tag_boxs'>
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="lantern_1.html">燈區介紹</a>
-          <a class='tag_a' href="lantern_2.html">大地曙(鼠)光燈區</a>
-          <a class='tag_a' href="lantern_203.html">光之涼亭</a>
+          <a class='tag_a' href="lantern_1.html">飛天曙(鼠)光燈區</a>
+          <a class='tag_a' href="lantern_110.html">傘閃動人</a>
         </div>
 
         <div class='little_boxs'>
-          <a href="lantern_1.html" class='little03'>飛天曙(鼠)光燈區</a>
-          <a href="lantern_2.html" class='little03 l_ok'>大地曙(鼠)光燈區</a>
+          <a href="lantern_1.html" class='little03 l_ok'>飛天曙(鼠)光燈區</a>
+          <a href="lantern_2.html" class='little03'>大地曙(鼠)光燈區</a>
           <a href="lantern_3.html" class='little03'>銀河曙(鼠)光燈區</a>
         </div>
 
         <div class='news_box'>
-          <div class='plan_boxs'><a href="lantern_201.html">光之夜市</a></div>
-          <div class='plan_boxs'><a href="lantern_202.html">光之花毯秀</a></div>
-          <div class='plan_boxs'><a class='plan_ok' href="lantern_203.html">光之涼亭</a></div>
-          <div class='plan_boxs'><a href="lantern_204.html">燈會迎賓</a></div>
-          <div class='plan_boxs'><a href="lantern_205.html">歡迎光林</a></div>
+          <div class='plan_boxs'><a href="lantern_101.html">光之飛航秀</a></div>
+          <div class='plan_boxs'><a href="lantern_102.html">光之森林</a></div>
+          <div class='plan_boxs'><a href="lantern_103.html">光之迷宮</a></div>
+          <div class='plan_boxs'><a href="lantern_104.html">飛天曙(鼠)光秀</a></div>
+          <div class='plan_boxs'><a href="lantern_105.html">麒麟迎賓</a></div>
+          <div class='plan_boxs'><a href="lantern_106.html">光之天幕</a></div>
+          <div class='plan_boxs'><a href="lantern_107.html">光之天橋</a></div>
+          <div class='plan_boxs'><a href="lantern_108.html">光之幻境</a></div>
+          <div class='plan_boxs'><a href="lantern_109.html">鼠光正亮</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="lantern_110.html">閃傘動人</a></div>
+          <div class='plan_boxs'><a href="lantern_111.html">光之祈球</a></div>
+          <div class='plan_boxs'><a href="lantern_112.html">星海琉光</a></div>
+          <div class='plan_boxs'><a href="lantern_113.html">珠光落玉</a></div>
+          <div class='plan_boxs'><a href="lantern_114.html">光之漫遊</a></div>
+          <div class='plan_boxs'><a href="lantern_115.html">翠堤之光</a></div>
         </div>
 
         <div class='news_box'>
-          <p class='p_title'>光之涼亭</p>
+          <p class='p_title'>傘閃動人</p>
         </div>
 
         <!-- <p class='add_type pad20' title='地點：'>平鎮新勢公園</p> -->
@@ -99,7 +109,7 @@
           文字候補
         </p>
 
-        <img class='all_img' src="img/l02_03.png">
+        <img class='all_img' src="img/l01_10.png">
       </div>
     </div>
 
