--- a/show_3.html
+++ b/show_3.html
@@ -30,6 +30,24 @@
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="msapplication-TileImage" content="fav/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
+
+    <style type="text/css">
+      .video-container {
+        position: relative;
+        padding-bottom: 56.25%;
+        padding-top: 30px;
+        height: 0;
+        overflow: hidden;
+      }
+
+      .video-container iframe, .video-container object, .video-container embed {
+        position: absolute;
+        top: 0;left: 0;
+        width: 100%;
+        height: 100%;
+      }
+    </style>
+
   </head>
   
   <body>
@@ -71,7 +89,7 @@
         <div class='tag_boxs'>
           <a class='tag_a' href="index.html">首頁</a>
           <a class='tag_a' href="show.html">表演節目</a>
-          <a class='tag_a' href="show_3.html">曙(鼠)光樂團</a>
+          <a class='tag_a' href="show_3_01.html">曙(鼠)光樂團</a>
           <a class='tag_a' href="show_3.html">曙光Light Up・歌詞</a>
         </div>
 
@@ -79,12 +97,12 @@
           <a href="show.html" class='little02'>燈區節目表</a>
           <a href="show_1.html" class='little02'>巨龍秀</a>
           <a href="show_2.html" class='little02'>夜光踩街</a>
-          <a href="show_3.html" class='little02 l_ok'>曙(鼠)光樂團</a>
+          <a href="show_3_01.html" class='little02 l_ok'>曙(鼠)光樂團</a>
         </div>
 
         <div class='news_box'>
-          <div class='plan_boxs'><a class='plan_ok' href="show_3.html">曙光Light Up・歌詞</a></div>
           <div class='plan_boxs'><a href="show_3_01.html">曙(鼠)光樂團・介紹</a></div>
+          <div class='plan_boxs'><a class='plan_ok' href="show_3.html">曙光Light Up・歌詞</a></div>
         </div>
 
         <div class='news_box'>
@@ -119,6 +137,10 @@
           讓我看到你在閃閃發光</br>
           溫暖了心房&nbsp;&nbsp;鼓起了胸膛&nbsp;&nbsp;一起發出最燦爛的曙光</br>
         </p>
+
+        <div class='video-container'>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/yEPLSLzqNjc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
       </div>
     </div>
 
@@ -137,11 +159,6 @@
       <div class='f_type_boxs'>
         <p class='f_type fw10 fwb'>協辦單位：</p>
         <p class='f_type fw90'>桃園市政府人事處、工務局、文化局、水務局、民政局、交通局、社會局、消防局、教育局、經發局、農業局、養工處、新聞處、衛生局、環保局、警察局、中壢區公所、平鎮區公所、交通部鐵道局、桃園大眾捷運股份有限公司、桃園航空城股份有限公司、桃園市新住民聯合服務中心</p>
-      </div>
-
-      <div class='f_type_boxs'>
-        <p class='f_type fw10 fwb'>參與單位：</p>
-        <p class='f_type fw90'>Uniqlo桃園春日路店、五福夜市、世界先進積體電路(股)公司、台茂購物中心、桃園市桃園區小檜溪暨埔子自辦市地重劃區重劃會、家樂福桃園店</p>
       </div>
     </div>
 
